--- a/index.html
+++ b/index.html
@@ -49,6 +49,41 @@
 
             </div>
 
+
+            <section class="section hero">
+                <div class="container">
+                  <header class="header">
+                    <div class="logo">
+                      <a href="index.html" class="logo__img">
+                        <img src="/IMG-from-maket/logo.png" alt="logo.img">
+                      </a>
+                    </div>
+                    <div class="header__btns">
+                      <div class="nav">
+                        <ul class="nav__list">
+                          <li class="nav__item">
+                            <a class="nav__item_link" href="#">о нас</a></li>
+                          <li class="nav__item">
+                            <a class="nav__item_link" href="#">бургеры</a></li>
+                          </li>
+                          <li class="nav__item">
+                            <a class="nav__item_link" href="#">команда</a></li>
+                          </li>
+                          <li class="nav__item">
+                            <a class="nav__item_link" href="#">меню</a></li>
+                          </li>
+                          <li class="nav__item">
+                            <a class="nav__item_link" href="#">отзывы</a></li>
+                          </li>
+                          <li class="nav__item">
+                            <a class="nav__item_link" href="#">контакты</a></li>
+                          </li>
+                        </ul>
+                      </div>
+                      <a href="#" class="btn btn__red">Заказать</a>
+        
+                    </div>
+
           </header>
           <!-- Продолжение после хедера первой страницы -->
           <div class="hero__container">
