create best section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                       <a href="#" class="btn btn__red">Заказать</a>
         
                     </div>
-
+<section class="best">
+  
+</section>
           </header>
           <!-- Продолжение после хедера первой страницы -->
           <div class="hero__container">
