--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           </header>
           <!-- Продолжение после хедера первой страницы -->
-          <div class="hero__container">
+          <div class="container hero__container">
             <div class="hero__content">
 
               <div class="hero__picture">
@@ -70,7 +70,7 @@
               <img src="IMG-from-maket/arrow-scroll.png" alt="down" class="arrow__down_img">
             </a>
           </div>
-
+          
         </div>
       </section>
 
@@ -136,7 +136,7 @@
 
   <section class="section review-page">
     <ul class="review__list">
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_1.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_1.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -150,7 +150,7 @@
           </div>
         </div>
       </li>
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_2.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_2.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -164,7 +164,7 @@
           </div>
         </div>
       </li>
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_3.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_3.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -178,7 +178,7 @@
           </div>
         </div>
       </li>
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_4.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_4.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -192,7 +192,7 @@
           </div>
         </div>
       </li>
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_5.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_5.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -206,7 +206,7 @@
           </div>
         </div>
       </li>
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_6.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_6.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -220,7 +220,7 @@
           </div>
         </div>
       </li>
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_7.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_7.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -234,7 +234,7 @@
           </div>
         </div>
       </li>
-      <li class="review__item" style="background:url(/../IMG-from-maket/review/item_8.jpg) center center / cover no-repeat">
+      <li class="review__item" style="background:url(IMG-from-maket/review/item_8.jpg) center center / cover no-repeat">
         <div class="review__hover">
           <h3 class="review__title">
             Константин спилберг
@@ -261,7 +261,7 @@
 
   <section class="section order">
     <div class="container">
-      <div class="title title--orange">Закажите доставку</div>
+      <div class="title title--orange title--orange-title">Закажите доставку</div>
       <form action="get" class="form">
         <div class="form__left">
           <div class="form__row">
@@ -366,7 +366,7 @@
 
   <section class="pagination">
     <ul class="pagination__list">
-      <li class="pagination__item">
+      <li class="pagination__item pagination__item-active">
         <a href="#" class="page_dot"></a>
       </li>
       <li class="pagination__item">
