--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 </ul>
               </div>
               <a href="#" class="btn order_btn">Заказать</a>
+              <a href="#" class="hamburger__menu">
+                <div class="ham-stick"></div>
+                <div class="ham-stick"></div>
+                <div class="ham-stick"></div>
+              </a>
 
             </div>
 
@@ -92,7 +97,7 @@
           <ul class="reason__list">
             <li class="reason__item">
               <div class="reason_banner">
-                <img src="IMG-from-maket/whe_are/meat.png" alt="">
+                <img class="reason-img" src="IMG-from-maket/whe_are/meat.png" alt="">
               </div>
               <div class="reason__part">
                 <h4 class="reason__title">100% свежее мясо</h4>
@@ -103,7 +108,7 @@
             </li>
             <li class="reason__item">
               <div class="reason__banner">
-                <img src="IMG-from-maket/whe_are/hand.png" alt="">
+                <img class="reason-img" src="IMG-from-maket/whe_are/hand.png" alt="">
               </div>
               <div class="reason__part">
                 <h4 class="reason__title">
@@ -118,7 +123,7 @@
             </li>
             <li class="reason__item">
               <div class="reason__banner">
-                <img src="IMG-from-maket/whe_are/natural.png" alt="">
+                <img class="reason-img" src="IMG-from-maket/whe_are/natural.png" alt="">
               </div>
               <div class="reason__part">
                 <h4 class="reason__title">
@@ -229,7 +234,7 @@
           </li>
           <li class="menu__item">
             <a href="#" class="menu__trigger" style="background-image: url('/IMG-from-maket/backgrounnds/bg-btn-2.jpg') ">
-              <span>Для мясоедов</span>
+              <span>Вегатерианское</span>
             </a>
             <div class="menu__wrap">
               <div class="menu__content">
@@ -240,7 +245,7 @@
           </li>
           <li class="menu__item">
             <a href="#" class="menu__trigger" style="background-image: url('/IMG-from-maket/backgrounnds/bg-btn-3.jpg') ">
-              <span>Для мясоедов</span>
+              <span>Диетическое</span>
             </a>
             <div class="menu__wrap">
               <div class="menu__content">
@@ -551,7 +556,7 @@
   </section>
 
 
-  <section class="section map">
+   <section class="map"> <!-- вот тут я удалил section так как он предпологал что будет все такбо большо, а у меня картинка нет, если будет тру карта, то она может быть подразмер окна и тогда и вернуть нужно section -->
     <div class="map">
       <img class="map-img" src="/IMG-from-maket/backgrounnds/map.jpg" alt="">
     </div>
