--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="#" class="menu__trigger" style="background-image: url('/IMG-from-maket/backgrounnds/bg-btn-1.jpg') ">
+            <a href="#" class="menu__trigger" style="background-image: url('IMG-from-maket/backgrounnds/bg-btn-1.jpg') ">
               <span>Для мясоедов</span>
             </a>
             <div class="menu__wrap">
@@ -233,7 +233,7 @@
             </div>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__trigger" style="background-image: url('/IMG-from-maket/backgrounnds/bg-btn-2.jpg') ">
+            <a href="#" class="menu__trigger" style="background-image: url('IMG-from-maket/backgrounnds/bg-btn-2.jpg') ">
               <span>Вегатерианское</span>
             </a>
             <div class="menu__wrap">
@@ -244,7 +244,7 @@
             </div>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__trigger" style="background-image: url('/IMG-from-maket/backgrounnds/bg-btn-3.jpg') ">
+            <a href="#" class="menu__trigger" style="background-image: url('IMG-from-maket/backgrounnds/bg-btn-3.jpg') ">
               <span>Диетическое</span>
             </a>
             <div class="menu__wrap">
@@ -280,59 +280,6 @@
 
 
 
-  <!-- 
-      <div class="accordion">
-        <ul>
-          <li>
-            <div>
-              <a href="#">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a href="#">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a href="#">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a href="#">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a href="#">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a href="#">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div> -->
 
 
 
@@ -569,7 +516,7 @@
             </span>
             <div class="tel__wrapper">
               <svg class="phone-icon">
-                <use xlink:href="/CSS/css/sprite.svg#phone"></use>
+                <use xlink:href="CSS/css/sprite.svg#phone"></use>
               </svg>
               <a href="tel:+7 (812) 377-13-77" class="tel">
                 +7 (812) 377-13-77</a>
@@ -580,28 +527,28 @@
               <li class="socials__item">
                 <a href="vk.com" class="socials__link">
                   <svg class="vk-icon" viewBox="0 0 126 72" enable-background="new 0 0 126 72">
-                    <use xlink:href="/CSS/css/sprite.svg#vk-ikon"></use>
+                    <use xlink:href="CSS/css/sprite.svg#vk-ikon"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials__item">
                 <a href="vk.com" class="socials__link">
                   <svg class="fb-icon" viewBox="0 0 36.711 36.711" enable-background="new 0 0 36.711 36.711">
-                    <use xlink:href="/CSS/css/sprite.svg#fb-ikon"></use>
+                    <use xlink:href="CSS/css/sprite.svg#fb-ikon"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials__item">
                 <a href="vk.com" class="socials__link">
                   <svg class="tw-icon" viewBox="0 0 36.663 36.664" enable-background="new 0 0 36.663 36.664">
-                    <use xlink:href="/CSS/css/sprite.svg#inst-ikon"></use>
+                    <use xlink:href="CSS/css/sprite.svg#inst-ikon"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials__item">
                 <a href="vk.com" class="socials__link">
                   <svg class="tw-icon" viewBox="0 0 37.453 31.21" enable-background="new 0 0 37.453 31.21">
-                    <use xlink:href="/CSS/css/sprite.svg#tw-ikon"></use>
+                    <use xlink:href="CSS/css/sprite.svg#tw-ikon"></use>
                   </svg>
                 </a>
               </li>
