Fixed some bags

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
     <section class="section team">
-      <div class="container team-container">
+      <div class=" team-container">
         <div class="team__wrapper">
           <div class="team__content">
             <h2 class="title title--orange team-title">Команда</h2>
