--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </div>
                         <div class="burger__btn_text">Состав</div>
                       </a>
-                      <img class="kkal-img" src="/IMG-from-maket/kkal.png" alt="kkal">
+                      <img class="kkal-img" src="IMG-from-maket/kkal.png" alt="kkal">
                       <div class="burger__picture">
                         <img src="IMG-from-maket/black_burger.png" alt="blk_brgr">
                       </div>
@@ -202,7 +202,7 @@
                         </div>
                         <div class="burger__btn_text">Состав</div>
                       </a>
-                      <img class="kkal-img" src="/IMG-from-maket/kkal.png" alt="kkal">
+                      <img class="kkal-img" src="IMG-from-maket/kkal.png" alt="kkal">
                       <div class="burger__picture">
                         <img src="IMG-from-maket/black_burger.png" alt="blk_brgr">
                       </div>
@@ -233,7 +233,7 @@
                         </div>
                         <div class="burger__btn_text">Состав</div>
                       </a>
-                      <img class="kkal-img" src="/IMG-from-maket/kkal.png" alt="kkal">
+                      <img class="kkal-img" src="IMG-from-maket/kkal.png" alt="kkal">
                       <div class="burger__picture">
                         <img src="IMG-from-maket/black_burger.png" alt="blk_brgr">
                       </div>
@@ -647,7 +647,7 @@
   <section class="section map__section">
     <!-- вот тут я удалил section так как он предпологал что будет все такбо большо, а у меня картинка нет, если будет тру карта, то она может быть подразмер окна и тогда и вернуть нужно section -->
     <div class="map">
-      <img class="map-img" src="/IMG-from-maket/backgrounnds/map.jpg" alt="">
+      <img class="map-img" src="IMG-from-maket/backgrounnds/map.jpg" alt="">
     </div>
     <footer class="footer">
       <div class="container">
@@ -749,7 +749,7 @@
 
 
 
-  <script src="/CSS/js/script.js" ></script>
+  <script src="CSS/js/script.js" ></script>
 </body>
 
 </html>
