--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
       <section class="section how_we_work-page">
         <div class="container">
           <h2 class="title how_we_work-title">Как мы работаем</h2>
-          <iframe width="720" height="400" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1">
+          <iframe class="video" width="720" height="400" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1">
           </iframe>
         </div>
       </section>
