--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <link rel="shortcut icon" href="IMG-from-maket/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="CSS/css/compile.css">
 
   <title>Document</title>
